Follow-up fix for Bug #1266, MSIE 8 time-box mis-alignment,
* Adding a '-no-docmode' flag.

--- a/application/assets/ouplayer/ouice-light/ouice-light.css
+++ b/application/assets/ouplayer/ouice-light/ouice-light.css
@@ -208,7 +208,7 @@ body,input{text-shadow:1px 1px 0 #fff; color:#183843; /*D. tourquoise*/}
 
 
 /*MSIE hack - border is required! */
-.oup.-ie7.mode-embed.mtype-audio .oup-title a.rel-2{
+.oup.-ie7.-no-docmode.mode-embed.mtype-audio .oup-title a.rel-2{
   position:relative;
   top:-14px;
 
